private subnet.tf
resource "aws_subnet" "private_sub1" {
  vpc_id     = aws_vpc.vpc_main.id
  cidr_block = "10.0.3.0/24"
  availability_zone ="us-east-1a"
  map_public_ip_on_launch = false
  tags = {
    Name = "private-subent-1"
  }
}

resource "aws_subnet" "private_sub2" {
  vpc_id     = aws_vpc.vpc_main.id
  cidr_block = "10.0.4.0/24"
  availability_zone ="us-east-1b"
  map_public_ip_on_launch = false
  tags = {
    Name = "private-subent-2"
  }
}
